<?xml version="1.0"?>
<package format="2">
  <name>mitsubishi_experimental</name>
  <version>0.1.0</version>
  <description>Experimental packages for Mitsubishi manipulators within ROS-Industrial.</description>
  <author>G.A. vd. Hoorn (TU Delft Robotics Institute)</author>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn (TU Delft Robotics Institute)</maintainer>
  <license>Apache 2.0</license>

  <url type="website">http://wiki.ros.org/mitsubishi_experimental</url>
  <url type="bugtracker">https://github.com/ros-industrial/mitsubishi_experimental/issues</url>
  <url type="repository">https://github.com/ros-industrial/mitsubishi_experimental</url>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage/>
    <rosindex>
      <tags>
        <tag>metapackage</tag>
        <tag>mitsubishi</tag>
        <tag>industrial</tag>
        <tag>ros-industrial</tag>
        <tag>experimental</tag>
      </tags>
    </rosindex>
  </export>
</package>
