<?xml version="1.0"?>
<package>
  <name>mitsubishi_rv7f_control</name>
  <version>1.0.0</version>
  <description>The mitsubishi_rv7f_control package</description>

  <maintainer email="ry0@todo.todo">ry0</maintainer>
  <license>BSD</license>
  <url type="repository">https://github.com/Nishida-Lab/mitsubishi_experimental</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>controller_manager</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>robot_state_publisher</run_depend>

</package>
