<?xml version="1.0"?>
<package>
  <name>mitsubishi_rv7f_gazebo</name>
  <version>1.0.0</version>
  <description>The mitsubishi_rv7f_gazebo package</description>

  <maintainer email="ry0@todo.todo">ry0</maintainer>
  <license>BSD</license>
  <url type="repository">https://github.com/Nishida-Lab/mitsubishi_experimental</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>ros_control</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>mitsubishi_rv7f_control</run_depend>
</package>
